--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="right">
             <div class="header">
                 <div class="nav">
-                    <img class="hambeg" src="hambeg.svg" alt="">
+                    <img class="hambeg invert" src="hambeg.svg" alt="">
                     <img class="invert" src="lefticon.svg" alt="">
                     <img class="invert" src="righticon.svg" alt="">
                 </div>
