--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spotify </title>
     <link rel="stylesheet" href="stylee.css">
     <link rel="stylesheet" href="utility.css">
 
